# cmake-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: options.cmake  util.cmake
include/: CMakeLists.txt
include/hello/: hello.h
src/: CMakeLists.txt  main.c
src/hello/: CMakeLists.txt
src/hello/include/: CMakeLists.txt  hello.h
src/hello/src/: CMakeLists.txt  hello.c
test/: CMakeLists.txt
test/src/: CMakeLists.txt  test.c
